--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Eyes of a Nomad | Photographer in Bali
 meta-description:
 meta-keywords:
+header-style: 
 featured-image_path:
 banner-1_path: /images/placeholder.jpg
 banner-position: 60% 30%;
@@ -63,7 +64,7 @@ ig-images:
 
           {% endif %}
           {% endfor %}
-    </div>    
+    </div>
   </div>
 </div>
 </section>
