--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@ footer_image: /images/placeholder-2.jpg
     </div> -->
     </div>
   </div>
-  <div class="col-6_xs-12 banner tall-100 relative" style="background-image:url('/images/placeholder-2.jpg')">
+  <div class="col-6_xs-12 banner tall-100 relative featured-bg">
     <nav class="hover-links" id="hover-links">
-      <a href="/" id="link-1">Fashion</a>
+      <a href="/" id="link-1" class="active">Fashion</a>
       <a href="/" id="link-2">Lifestyle</a>
       <a href="/" id="link-3">Product</a>
       <a href="/" id="link-5">Venue</a>
       <a href="/" id="link-6">Food</a>
     </nav>
     <div class="hover-image fashion"></div>
-    <div class="hover-image lifestyle"></div>
-    <div class="hover-image product"></div>
-    <div class="hover-image venue"></div>
-    <div class="hover-image food"></div>
+    <div class="hover-image lifestyle hidden"></div>
+    <div class="hover-image product hidden"></div>
+    <div class="hover-image venue hidden"></div>
+    <div class="hover-image food hidden"></div>
   </div>
 
 </section>
