--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,10 @@ featured_image: /images/placeholder-2.jpg
 ---
 
 <section class="grid">
-  <div class="col-5 relative">
-    <h2 class="big-bold portfolio-heading "> Portfolio. </h2>
+  <div class="col-5_sm-3 relative">
+    <h2 class="big-bold portfolio-heading"> Portfolio. </h2>
   </div>
-  <div class="col-7 bg-image tall-110" style="background-image:url('{{page.featured_image}}')"></div>
+  <div class="col-7_sm-9 bg-image tall-110 portfolio-image" style="background-image:url('{{page.featured_image}}')"></div>
 </section>
 <section class="grid-spaceBetween portfolio padded mob-flex-flip">
   <div class="col-8_sm-12 grid mob-horizontal-scroll">
@@ -36,3 +36,36 @@ featured_image: /images/placeholder-2.jpg
   </div>
 
 </section>
+
+<style>
+
+  .portfolio-heading {
+    transform: rotate(270deg);
+    display: inline-block;
+    font-size: 15vh;
+    position: absolute;
+    top: 36vh;
+    right: -22vh;
+  }
+
+
+  @media(max-width:767px) {
+    .portfolio-image {
+      min-height: 90vh;
+    }
+    .portfolio-heading {
+      right: -29vh;
+    }
+    .mob-horizontal-scroll {
+      padded-top: 2rem;
+    }
+    .portfolio {
+      padding: 10% 0;
+    }
+    .border-left {
+      margin-left: 1.5rem;
+    }
+
+  }
+
+</style>
