--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ footer_image: /images/placeholder-2.jpg
 
 </style>
 
-<section class="padded bg-split-white-tan mob-flex-flip">
-    <div class="grid-center">
+<section class="padded bg-split-white-tan">
+    <div class="grid-center mob-flex-flip">
         <div class="col-6_sm-12-middle padded">
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
           <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -106,12 +106,12 @@ footer_image: /images/placeholder-2.jpg
     <h3 class="vertical-text big-bold"> Feature. </h3>
   </div>
   <div class="col-3">
-    <div class="bg-image portrait border-05" style="background-image:url('/images/placeholder-2.jpg');"></div>
-    <div class="bg-image portrait border-05" style="background-image:url('/images/placeholder-2.jpg');"></div>
+    <a href="#" class="bg-image portrait border-05" style="background-image:url('/images/placeholder-2.jpg');"></a>
+    <a href="#" class="bg-image portrait border-05" style="background-image:url('/images/placeholder-2.jpg');"></a>
   </div>
   <div class="col-5 grid">
     <div class="col-12">
-      <div class="bg-image tall-landscape border-05" style="background-image:url('/images/placeholder-2.jpg');"></div>
+      <a href="#" class="bg-image tall-landscape border-05" style="background-image:url('/images/placeholder-2.jpg');"></a>
     </div>
     <div class="col-12-bottom padded-1 right">
       <a href="/portfolio" class="emphasis"> View Full Portfolio > </a>
@@ -123,10 +123,11 @@ footer_image: /images/placeholder-2.jpg
 
 .vertical-text {
   transform: rotate(270deg);
-    margin-left: -34vh;
-    transform-origin: bottom right 0;
+  display: inline-block;
+  margin-left: -23vw;
+  position: absolute;
+  transform-origin: bottom right 0;
 }
-
 
 </style>
 
