--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ slideshow:
   product_image: /images/camaya/EON-camaya-2.jpg
   venue_image: /images/camaya/EON-camaya-3.jpg
   food_image: /images/camaya/EON-camaya-4.jpg
-wide_image: /images/placeholder-2.jpg
-footer_image: /images/placeholder-2.jpg
+wide_image: /images/forsoul-2019/eon-forsoul-19.jpg
+footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 ---
 
 <!-- this is just an example. You can safely delete these and add your own blocks -->
@@ -106,12 +106,12 @@ footer_image: /images/placeholder-2.jpg
     <h3 class="vertical-text big-bold"> Feature. </h3>
   </div>
   <div class="col-3">
-    <a href="#" class="bg-image portrait border-05" style="background-image:url('/images/placeholder-2.jpg');"></a>
-    <a href="#" class="bg-image portrait border-05" style="background-image:url('/images/placeholder-2.jpg');"></a>
+    <a href="#" class="bg-image portrait border-05" style="background-image:url('/images/liq-bikini/eon-liq-6.jpg');"></a>
+    <a href="#" class="bg-image portrait border-05" style="background-image:url('/images/liq-bikini/eon-liq-21.jpg');"></a>
   </div>
   <div class="col-5 grid">
     <div class="col-12">
-      <a href="#" class="bg-image tall-landscape border-05" style="background-image:url('/images/placeholder-2.jpg');"></a>
+      <a href="#" class="bg-image tall-landscape border-05" style="background-image:url('/images/liq-bikini/eon-liq-29.jpg');"></a>
     </div>
     <div class="col-12-bottom padded-1 right">
       <a href="/portfolio" class="emphasis"> View Full Portfolio > </a>
