--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-featured_image: /images/placeholder-2.jpg
+featured_image: /images/uma-2020/eon-uma2020-30.jpg
 ---
 
 <section class="grid">
@@ -23,7 +23,7 @@ featured_image: /images/placeholder-2.jpg
         <p> {{project.subtitle}}</p>
       </a>
       {% endfor %}
-    </div> 
+    </div>
   </div>
   <div class="col-3_sm-12-top border-left sticky-top">
       <div class="sticky-top padded-2">
