--- a/portfolio.html
+++ b/portfolio.html
@@ -3,12 +3,15 @@ layout: default
 featured_image: /images/uma-2020/eon-uma2020-30.jpg
 ---
 
+<!-- Intro Banner  -->
 <section class="grid">
   <div class="col-5_sm-3 relative">
     <h2 class="big-bold portfolio-heading"> Portfolio. </h2>
   </div>
   <div class="col-7_sm-9 bg-image tall-110 portfolio-image" style="background-image:url('{{page.featured_image}}')"></div>
 </section>
+
+<!-- Portfolio Loop Section  -->
 <section class="grid-spaceBetween portfolio padded mob-flex-flip">
   <div class="col-8_sm-12">
     <div class="grid mob-horizontal-scroll">
