create new services pages

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -12,14 +12,19 @@ photography-gallery:
 videography-2_image: /images/forsoul-2019/eon-forsoul-1.jpg
 services:
   - name: Fashion
+    url:
     image_path: /images/forsoul-2019/eon-forsoul-1.jpg
   - name: Lifestyle
+    url:
     image_path: /images/forsoul-2019/eon-forsoul-1.jpg
   - name: Venue
+    url:
     image_path: /images/forsoul-2019/eon-forsoul-1.jpg
   - name: Food
+    url:
     image_path: /images/forsoul-2019/eon-forsoul-1.jpg
   - name: Product
+    url: 
     image_path: /images/forsoul-2019/eon-forsoul-1.jpg
 ---
 
