--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ slideshow:
   venue_image: /images/kabron/EON-kabron-25.jpg
   food_image: /images/front-cafe/EON-front-11.jpg
 wide_image: /images/forsoul-2019/eon-forsoul-19.jpg
+featured_project_url: /projects/liq-bikini
 footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 ---
 
@@ -106,12 +107,12 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
     <h3 class="vertical-text big-bold"> Feature. </h3>
   </div>
   <div class="col-3">
-    <a href="#" class="bg-image portrait border-05" style="background-image:url('/images/liq-bikini/eon-liq-40.jpg');"></a>
-    <a href="#" class="bg-image portrait border-05" style="background-image:url('/images/liq-bikini/eon-liq-8.jpg');"></a>
+    <a href="{{page.featured_project_url}}" class="bg-image portrait border-05" style="background-image:url('/images/liq-bikini/eon-liq-40.jpg');"></a>
+    <a href="{{page.featured_project_url}}" class="bg-image portrait border-05" style="background-image:url('/images/liq-bikini/eon-liq-8.jpg');"></a>
   </div>
   <div class="col-5 grid">
     <div class="col-12">
-      <a href="#" class="bg-image tall-landscape border-05" style="background-image:url('/images/liq-bikini/eon-liq-29.jpg');"></a>
+      <a href="{{page.featured_project_url}}" class="bg-image tall-landscape border-05" style="background-image:url('/images/liq-bikini/eon-liq-29.jpg');"></a>
     </div>
     <div class="col-12-bottom padded-1 right">
       <a href="/portfolio" class="emphasis"> View Full Portfolio > </a>
