new portfolio images

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
   </div>
   <div class="col-6_xs-12 banner tall-100 relative featured-bg">
     <nav class="hover-links" id="hover-links">
-      <a href="/" id="link-1" class="active">Fashion</a>
-      <a href="/" id="link-2">Lifestyle</a>
-      <a href="/" id="link-3">Product</a>
-      <a href="/" id="link-5">Venue</a>
-      <a href="/" id="link-6">Food</a>
+      <a href="/portfolio#filter" id="link-1" class="active">Fashion</a>
+      <a href="/portfolio#filter" id="link-2">Lifestyle</a>
+      <a href="/portfolio#filter" id="link-3">Product</a>
+      <a href="/portfolio#filter" id="link-5">Venue</a>
+      <a href="/portfolio#filter" id="link-6">Food</a>
     </nav>
     <div class="hover-image fashion"></div>
     <div class="hover-image lifestyle hidden"></div>
