--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@ featured_image: /images/uma-2020/eon-uma2020-30.jpg
       {% endfor %}
     </div>
   </div>
-  <div class="col-3_sm-12-top border-left sticky-top">
+  <div class="col-3_sm-12-top border-left sticky-top" id="filter">
       <div class="sticky-top padded-2">
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         <nav id="portfolio-filter" class="margin-top-2">
