--- a/work-with-us.html
+++ b/work-with-us.html
@@ -1,14 +1,15 @@
 ---
 layout: default
-banner_image: /images/forsoul-2019/eon-forsoul-1.jpg
-photography-2_image: /images/forsoul-2019/eon-forsoul-1.jpg
+banner_image: /images/uma-alure/eon-uma-alure-10.jpg
+photography-1_image: /images/forsoul-2019/eon-forsoul-23.jpg
+photography-2_image: /images/uma-resort/eon-uma-resort-5.jpg
 photography-gallery:
-  - /images/forsoul-2019/eon-forsoul-1.jpg
-  - /images/forsoul-2019/eon-forsoul-1.jpg
-  - /images/forsoul-2019/eon-forsoul-1.jpg
-  - /images/forsoul-2019/eon-forsoul-1.jpg
-  - /images/forsoul-2019/eon-forsoul-1.jpg
-  - /images/forsoul-2019/eon-forsoul-1.jpg
+  - /images/liq-bikini/eon-liq-29.jpg
+  - /images/asri-swim/eon-asri-19.jpg
+  - /images/uma-2020/eon-uma2020-21.jpg
+  - /images/botanist/eon-botanist-1.jpg
+  - /images/alex-hossick/eon-hossick-29.jpg
+  - /images/linjer-1/eon-linjer-36.jpg
 videography-2_image: /images/forsoul-2019/eon-forsoul-1.jpg
 services:
   - name: Fashion
@@ -88,7 +89,7 @@ services:
     </div>
   </div>
   <div class="col-6_xs-12 padded mob-order-1">
-    <img src="/images/forsoul-2019/eon-forsoul-1.jpg" class="editable">
+    <img src="{{page.photography-1_image}}" class="editable">
     <p class="image-caption-right editable"> This is a short image caption </p>
   </div>
   <div class="col-6_xs-12 padded-l-10p">
@@ -350,7 +351,15 @@ services:
   }
 
   .mixed-gallery .tall-portrait {
-    padding-bottom: 116.6%;
+    padding-bottom: 140%;
+  }
+
+  .mixed-gallery .portrait {
+    padding-bottom: 135%;
+  }
+
+  .mixed-gallery .landscape {
+    padding-bottom: 75%;
   }
 
 
