--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,74 @@ header-class: on-top
   </div>
 </section>
 
+<!--  Banner Image  -->
+
+<section class="banner tall-50" style="background-image:url({{page.footer_image}});">
+
+</section>
+
+<!--  Contact form  -->
+<section class="padded-10 v-light-bg">
+
+    <form method="post" action="/success.html" class="enquiry capped-width">
+
+      <div class="grid padded">
+      <div class="col-2 relative">
+        <h2 class="sm-bold vertical-text"> The Basics. </h2>
+      </div>
+
+      <div class="col-10 padded-2">
+        <div class="floating-input">
+          <input type="text" name="name" placeholder="Your Name" class="input-text">
+          <label class="input-label">Your Name</label>
+        </div>
+
+        <div class="floating-input">
+          <input type="text" name="email" placeholder="Your Email Address" class="input-text">
+          <label class="input-label">Your Email Address</label>
+        </div>
+
+        <div class="floating-input">
+          <input type="text" name="email" placeholder="Your Whatsapp (if preferred)" class="input-text">
+          <label class="input-label">Your Whatsapp</label>
+        </div>
+
+      </div>
+    </div>
+    <div class="grid padded">
+
+      <div class="col-2 relative">
+        <h2 class="sm-bold vertical-text"> The project. </h2>
+      </div>
+
+      <div class="col-10 padded-2">
+        <div class="floating-input">
+          <textarea name="message" placeholder="Tell me a little about your business or brand" class="input-text"></textarea>
+          <label class="input-label">Your Brand</label>
+        </div>
+
+        <div class="floating-input">
+          <textarea name="message" placeholder="Let me know what services you are looking for or how we can help." class="input-text"></textarea>
+          <label class="input-label">Your Message</label>
+        </div>
+
+        <input type="submit" value="Send Message" class="button-solid">
+
+      </div>
+
+
+
+
+
+      <input type="hidden" name="_to" value="sales@example.com,support@example.com">
+      <input type="text" name="_gotcha" style="display: none;">
+
+
+    </form>
+
+
+</section>
+
 
 <!--  Inline Styles  -->
 <style>
@@ -52,6 +120,17 @@ header-class: on-top
     top: -2rem;
   }
 
+  form .vertical-text {
+    transform: rotate(270deg);
+    font-size: 8vh;
+    min-width: 60vh;
+    transform-origin: top left 0;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: 45vh;
+  }
+
   .contact p {
     margin-bottom:0.2rem;
   }
@@ -67,9 +146,3 @@ header-class: on-top
   }
 
 </style>
-
-<!--  Banner Image  -->
-
-<section class="banner tall-50" style="background-image:url({{page.footer_image}});">
-
-</section>
