Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 <section class="padded bg-split-white-tan">
     <div class="grid-center mob-flex-flip">
         <div class="col-6_sm-12-middle padded">
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p> I am a photographer, content creator & photography mentor living the dream in beautiful Bali, Indonesia.  </p>
+          <p> If I’m not helping brands capture the essence of their personality and telling their story through my photography/videography, I’m travelling the world or teaching the next generation of content creators through my school the Institute of Code.</p>
         </div>
         <div class="col-5_sm-12-middle padded">
           <h2 class="big-bold">Who.</h2>
@@ -96,7 +96,7 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 <section class="padded centered grid-center padded-t-0">
   <div class="col-8_sm-12">
     <hr class="centered wide">
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+    <p> Photography has always been a passion in my life, starting when I was a toddler, grabbing my father’s camera, emptying his entire roll of film aimlessly in a few short minutes and loving every minute of it. However, it wasn’t until I left my home in Melbourne, Australia, & began to travel the world, that my love for capturing a fraction of a second, something breathtakingly beautiful or a little crazy became an obsession. </p>
 
     <hr class="centered wide">
   </div>
