Updated 'portfolio.html' via CloudCannon

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@ featured_image: /images/uma-2020/eon-uma2020-30.jpg
   </div>
   <div class="col-3_sm-12-top border-left sticky-top" id="filter">
       <div class="sticky-top padded-2">
-        <p> Since moving to Bali 5 years ago, I’ve been lucky enough to work with some incredible brands, capturing each one in a different light, telling their individual story through the way I plan, shoot and edit. I pride myself on not having one particular style, if you have a vision, lets work together to create something yours, something unique. Have a browse through a small portion of my work (using the categories below) and if there is something else that you have in mind that you can’t see, get in touch! </p>
+        <p> I’ve been lucky enough to work with some incredible brands, capturing each one in a different light, telling their individual story through the way I plan, shoot and edit. I pride myself on not having one particular style, if you have a vision, lets work together to create something yours, something unique. </p>
         <nav id="portfolio-filter" class="margin-top-2">
           <a class="active">Featured</a> /
           <a>Fashion</a> /
