--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
     <div class="grid-center mob-flex-flip">
         <div class="col-6_sm-12-middle padded">
           <p> I am a photographer, content creator & photography mentor living the dream in beautiful Bali, Indonesia.  </p>
-          <p> If I’m not helping brands capture the essence of their personality and telling their story through my photography/videography, I’m travelling the world or teaching the next generation of content creators through my school the Institute of Code.</p>
+          <p> If I’m not helping brands capture the essence of their personality and telling their story through my photography/videography, I’m travelling the world or teaching the next generation of content creators through my school the <a href="http://www.instituteofcode.com">Institute of Code.</a></p>
         </div>
         <div class="col-5_sm-12-middle padded">
           <h2 class="big-bold">Who.</h2>
