fix responsive changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Eyes of a Nomad | Photographer in Bali
 meta-description:
 meta-keywords:
-header-style: hide-logo
+header-style: on-top hide-logo
 featured-image_path:
 banner-1_path: /images/placeholder-2.jpg
 banner-position: 60% 30%;
@@ -47,8 +47,9 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
     <div class="hover-image food hidden"></div>
   </div>
 </section>
-<section class="light-bg padded-v">
-  <div class="col-12 mob-show mob-horizontal-scroll grid" style="padding: 0 1rem;">
+
+<section class="light-bg padded-v mob-show">
+  <div class="col-12 mob-horizontal-scroll grid" style="padding: 0 1rem;">
     <div class="col-11 padded-1">
       <a href="/portfolio?fashion" id="fashion" class="bg-image fashion">
         <h3 class="pinned-to-bottom"> FASHION </h3>
@@ -62,17 +63,17 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
     <div class="col-11 padded-1">
       <a href="/portfolio?product" id="product" class="bg-image product">
         <h3 class="pinned-to-bottom"> PRODUCT </h3>
-      </div>
+      </a>
     </div>
     <div class="col-11 padded-1">
-      <href="/portfolio?venue" id="venue" class="bg-image venue">
+      <a href="/portfolio?venue" id="venue" class="bg-image venue">
         <h3 class="pinned-to-bottom"> VENUE </h3>
-      </div>
+      </a>
     </div>
     <div class="col-11 padded-1">
-      <href="/portfolio?food" id="food" class="bg-image food">
+      <a href="/portfolio?food" id="food" class="bg-image food">
         <h3 class="pinned-to-bottom"> FOOD </h3>
-      </div>
+      </a>
     </div>
 
     </div>
