--- a/work-with-us.html
+++ b/work-with-us.html
@@ -45,7 +45,7 @@ services:
         EYES OF A NOMAD <span> x <span> KELAPA CREATIVE
       </h2>
     </div>
-    <div class="col-6_sm-12-middle padded">
+    <div class="col-6_sm-12-middle padded editable">
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
@@ -58,15 +58,15 @@ services:
     <h2 class="big-bold medium-text"> Services. </h2>
   </div>
 
-  <div class="col-4_sm-12 padded-2">
+  <div class="col-4_sm-12 padded-2 editable">
       <h3> <a href="#photography"> Photography > </a> </h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
   </div>
-  <div class="col-4_sm-12 padded-2">
+  <div class="col-4_sm-12 padded-2 editable">
     <h3> <a href="#videgraphy"> Videography > </a> </h3>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
   </div>
-  <div class="col-4_sm-12 padded-2">
+  <div class="col-4_sm-12 padded-2 editable">
     <h3> <a href="#marketing"> Marketing > </a> </h3>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
   </div>
@@ -74,15 +74,15 @@ services:
 
 <!-- - - - -  - - - - PHOTOGRAPHY SECTION  - - - - - - - - - - - - -->
 <section class="border-center grid-spaceBetween padded padded-b-15vh" id="photography">
-  <div class="col-6_xs-12 padded">
+  <div class="col-6_xs-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2"> Photography. </h2>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     <div class="grid">
-      <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-0">
+      <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-0 editable">
         <h4 class="margin-top-2"> Basic Packages </h4>
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </p>
       </div>
-      <div class="col-6_xs-12 padded-1 mob-p-0">
+      <div class="col-6_xs-12 padded-1 mob-p-0 editable">
         <h4 class="margin-top-2"> Full Production </h4>
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
@@ -98,19 +98,19 @@ services:
   <div class="col-5_xs-12-middle padded centered">
 
       <hr class="centered">
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       <hr class="centered">
 
   </div>
 
   <div class="col-6_sm-12 service-details">
     <div class="padded-l-10p">
-        <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <p class="subtle editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     </div>
   </div>
   <div class="col-6_sm-12  service-details">
     <div class="padded-r-10p">
-        <p class="subtle"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        <p class="subtle editable"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </div>
   </div>
 </section>
@@ -137,15 +137,15 @@ services:
 
 <!-- - - - -  - - - - Videography SECTION  - - - - - - - - - - - - -->
 <section class="border-center grid-spaceBetween padded padded-b-15vh v-light-bg" id="videography">
-  <div class="col-6_xs-12 padded">
+  <div class="col-6_xs-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2"> Videography. </h2>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     <div class="grid">
-      <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-0">
+      <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-0 editable">
         <h4 class="margin-top-2"> Basic Packages </h4>
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </p>
       </div>
-      <div class="col-6_xs-12 padded-1 mob-p-0">
+      <div class="col-6_xs-12 padded-1 mob-p-0 editable">
         <h4 class="margin-top-2"> Full Production </h4>
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
@@ -161,18 +161,18 @@ services:
   <div class="col-5_xs-12-middle padded centered">
 
       <hr class="centered">
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       <hr class="centered">
 
   </div>
 
   <div class="col-6_sm-12 service-details">
-    <div class="padded-l-10p">
+    <div class="padded-l-10p editable">
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     </div>
   </div>
   <div class="col-6_sm-12  service-details">
-    <div class="padded-r-10p">
+    <div class="padded-r-10p editable">
         <p class="subtle"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </div>
   </div>
@@ -215,19 +215,19 @@ services:
 
 <!-- Marketing intro -->
 <section class="grid-spaceBetween padded padded-b-0" id="marketing">
-  <div class="col-9_xs-12 padded">
+  <div class="col-9_xs-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2"> Marketing. </h2>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     <div class="grid">
-      <div class="col-4_xs-12 padded-1 padded-l-0 mob-p-0">
+      <div class="col-4_xs-12 padded-1 padded-l-0 mob-p-0 editable">
         <h4 class="margin-top-2"> Marketing Strategy</h4>
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </p>
       </div>
-      <div class="col-4_xs-12 padded-1 mob-p-0">
+      <div class="col-4_xs-12 padded-1 mob-p-0 editable">
         <h4 class="margin-top-2"> Social Media Management </h4>
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
-      <div class="col-4_xs-12 padded-1 mob-p-0">
+      <div class="col-4_xs-12 padded-1 mob-p-0 editable">
         <h4 class="margin-top-2"> Content Marketing </h4>
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
@@ -243,18 +243,18 @@ services:
   <div class="col-5_xs-12-middle padded centered">
 
       <hr class="centered">
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      <p class="editable"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       <hr class="centered">
 
   </div>
 
   <div class="col-6_sm-12 service-details">
-    <div class="padded-l-10p">
+    <div class="padded-l-10p editable">
         <p class="subtle"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     </div>
   </div>
   <div class="col-6_sm-12  service-details">
-    <div class="padded-r-10p">
+    <div class="padded-r-10p editable">
         <p class="subtle"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </div>
   </div>
