--- a/work-with-us.html
+++ b/work-with-us.html
@@ -77,15 +77,15 @@ services:
   <div class="col-6_xs-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2">Photography.</h2>
     <p>What makes a great photo? It's not about lighting or composition, although both of these are important. It's knowing what story you want to tell, what feeling you want to convey, what information you need to communicate and bringing that to life through the lens.&nbsp;</p>
-    <p>We work with local &amp; international companies here in Bali, as well as remotely for brands from all over the world to help them tell their story.&nbsp;</p>
+    <p>We work with local &amp; international companies here in Bali, as well as remotely for brands from all over the world to help them tell their story, and for the right project travel to you.</p>
     <div class="grid">
       <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-0">
-        <h4 class="margin-top-2">Basic Packages</h4>
-        <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h4 class="margin-top-2">Affordable Packages</h4>
+        <p class="subtle">With mini-shoots starting as little as $350, we've got packages to suit every brand and budget. Whether you're launching a new fashion label or product line, we understand the needs of entrepreneurs and small business owners and can guide you through the process to get the maximum impact from your budget.&nbsp;</p>
       </div>
       <div class="col-6_xs-12 padded-1 mob-p-0">
         <h4 class="margin-top-2">Full Production</h4>
-        <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="subtle">Think of us as your very own photography production team. From creating a content strategy, coming up with a creative direction for the shoot and managing all the logistics from location sourcing to model castings. You can send us your products or outfits and we'll handle everything else -- keeping you in the loop every step of the way.&nbsp;</p>
       </div>
     </div>
   </div>
@@ -102,7 +102,7 @@ services:
 
       <hr class="centered" />
       <p class="editable">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        We take the time to get to you know your business, brand, customers and goals so that that by the time we turn up to shoot we understand your vision and are ready to bring it to life.
       </p>
       <hr class="centered" />
 
@@ -111,14 +111,14 @@ services:
   <div class="col-6_sm-12 service-details">
     <div class="padded-l-10p">
         <p class="subtle editable">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          <strong>Editorial &amp; Lifestyle Photography</strong><br />Looking for that magazine feeling that brings a sophisticated edge to the brand? We've got you.<br />We also specialise in creating the perfect mix of lifestyle content to bring your social media, website and digital ads to life.&nbsp;
         </p>
     </div>
   </div>
   <div class="col-6_sm-12  service-details">
     <div class="padded-r-10p">
         <p class="subtle editable">
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <strong>Studio &amp; E-commerce </strong><br />With our very own state of the art photography studio at Kelapa Creative we have the skills, experience and equipment to create stunning studio imagery from cut-outs and product shots.&nbsp;&nbsp;
         </p>
     </div>
   </div>
@@ -148,22 +148,22 @@ services:
 <section class="border-center grid-spaceBetween padded padded-b-15vh v-light-bg" id="videography">
   <div class="col-6_xs-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2">Videography.</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Videos have the power to take your brand to the next level and engage your audience in a whole new way. Videography is all about capturing a feeling, telling a story -- but it's also about showcasing the unique benefits of your target audience. To do that we make sure that we take the time to really understand your brand, your customers, and your product. We bring a decade of marketing experience to the table and combine that with videography talent for a winning combination that helps you stand out from the crowd and have video content that makes an impact.&nbsp;</p>
     <div class="grid">
       <div class="col-6_xs-12 padded-1 padded-l-0 mob-p-0">
-        <h4 class="margin-top-2">Basic Packages</h4>
-        <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h4 class="margin-top-2">Hotel &amp; Venue Videos</h4>
+        <p class="subtle">Show don't tell. From smooth video walkthroughs to creative lifestyle videos, we'll create content that stops-the-scroll and helps you to fill your venue with eager customers. We've worked with luxury hotels, villas, and venues around the world and would love to help you.&nbsp;</p>
       </div>
       <div class="col-6_xs-12 padded-1 mob-p-0">
-        <h4 class="margin-top-2">Full Production</h4>
-        <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h4 class="margin-top-2">Fashion &amp; Swim&nbsp;</h4>
+        <p class="subtle">Videos not only tell a story about your brand, they have been proven to increase conversion rate on your website and boost sales. From studio videos, to 30-second lifestyle clips for social media and full editorial campaigns the possibilities are endless.&nbsp;</p>
       </div>
     </div>
   </div>
   <div class="col-6_xs-12 padded mob-order-1">
     <img src="/images/forsoul-2019/eon-forsoul-1.jpg" class="editable" />
     <p class="image-caption-right editable">
-      This is a short image caption
+      Videography for fashion brands in Bali and the world.
     </p>
   </div>
   <div class="col-6_xs-12 padded-l-10p">
@@ -173,7 +173,7 @@ services:
 
       <hr class="centered" />
       <p class="editable">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        We have an experienced team you can trust to bring your vision to life.&nbsp;
       </p>
       <hr class="centered" />
 
@@ -181,12 +181,14 @@ services:
 
   <div class="col-6_sm-12 service-details">
     <div class="padded-l-10p editable">
-      <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h4 class="subtle">Our Videography Gear&nbsp;</h4>
+      <p class="subtle"><strong></strong>We have multiple cameras for use including Canon R5, which can shoot up to 8k RAW video. We also have a variety of additional equipment including gimbal stabilisers, &nbsp;professional audio recording, and underwater housing.&nbsp;<br />&nbsp;</p>
     </div>
   </div>
   <div class="col-6_sm-12  service-details">
     <div class="padded-r-10p editable">
-      <p class="subtle">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h4 class="subtle">Our Studio Environment&nbsp;</h4>
+      <p class="subtle"><strong></strong>Our photography studio has a 4x light setup for both photo &amp; video (including overhead lighting), seamless paper &amp; fabric backdrops, various diffusers including butterfly scrim, overhead camera and boom mic, and professional motorised slider.&nbsp;</p>
     </div>
   </div>
 </section>
@@ -230,19 +232,20 @@ services:
 <section class="grid-spaceBetween padded padded-b-0" id="marketing">
   <div class="col-9_xs-12 padded editable">
     <h2 class="big-bold medium-text margin-bottom-2">Marketing.</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>From brand development &amp; strategy through to implementation, we're a one-stop-shop that can handle all of your needs -- and prioritise your business as though it were our own.&nbsp;</p>
+    <p>Whether you're just starting out and want a roadmap of where to focus your efforts (because we know how overwhelming it can be) or your have an existing brand that's looking for fresh ideas and modern digital experience, we'll help you find a package that suits your needs (and your budget!). Then you can choose to take our strategy and run with it, or we can manager your social media for you ongoing.&nbsp;</p>
     <div class="grid">
       <div class="col-4_xs-12 padded-1 padded-l-0 mob-p-0">
         <h4 class="margin-top-2">Marketing Strategy</h4>
-        <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="subtle">Do you ever wish that you could step back and get a big-picture view of your marketing and understand where to invest your time and money? We'll help you see through the fluff and create an actionable plan to start attracting your ideal customer, generating sales and getting amazing reviews.&nbsp;</p>
       </div>
       <div class="col-4_xs-12 padded-1 mob-p-0">
         <h4 class="margin-top-2">Social Media Management</h4>
-        <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="subtle">We care about results, not just popularity - we'll build you a content strategy, design a cohesive instagram grid, write engaging captions and utilise effective growth techniques to generate real impact for your business.&nbsp;</p>
       </div>
       <div class="col-4_xs-12 padded-1 mob-p-0">
-        <h4 class="margin-top-2">Content Marketing</h4>
-        <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h4 class="margin-top-2">Influencer Marketing</h4>
+        <p class="subtle">Working with influencers can bring a huge ROI to your business at very affordable costs, but only if you know what you're doing and how to manage influencer campaigns. We know how to find genuine influencers that fit your brand and coordinate gifting and paid influencer campaigns.&nbsp;</p>
       </div>
     </div>
   </div>
@@ -259,7 +262,7 @@ services:
 
       <hr class="centered" />
       <p class="editable">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Running <a href="http://www.instituteofcode.com">a school</a> that teaches marketing, photography and social media we bring the latest actionable insights and techniques to work for your brand or business.&nbsp;
       </p>
       <hr class="centered" />
 
@@ -267,12 +270,12 @@ services:
 
   <div class="col-6_sm-12 service-details">
     <div class="padded-l-10p editable">
-      <p class="subtle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="subtle"><strong>Strategic Perspective</strong><strong></strong><br />We always start with a strategic review of your business goals, your target customer, your competitors to build an in-depth social media strategy.&nbsp;</p>
     </div>
   </div>
   <div class="col-6_sm-12  service-details">
     <div class="padded-r-10p editable">
-      <p class="subtle">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="subtle"><strong>Made for your brand</strong><strong></strong><br />There is no one-sized-fits-all approach, we tailor every stage of the process to suit the personality of your brand. Whether that's sophisticated luxury or playfully cheeky.&nbsp;</p>
     </div>
   </div>
 </section>
